<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:padding="16dp"
    tools:context=".AddPackingFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title_add_packing"
            android:text="@string/scan_packing"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/group"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/white_outline_edittext"
                android:paddingEnd="10dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                android:contentDescription="@string/img_dropdown" />
        </FrameLayout>
        <TextView
            android:text="@string/pallet"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_pallet"
            android:textColor="@color/black"
            android:background="@drawable/black_outline"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:enabled="false"
            android:hint="@string/scan_roll_pallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/no_roll"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_roll"
            android:textColor="@color/black"
            android:background="@drawable/black_outline"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:enabled="false"
            android:hint="@string/scan_roll_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/core_id"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_core"
            android:textColor="@color/black"
            android:background="@drawable/black_outline"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:enabled="false"
            android:hint="@string/scan_roll_core"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_simpan"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_width="200dp"
            android:layout_height="60dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>